# MindustryLauncher

./: .gitignore  .npmrc  AGENTS.md  App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MindustryLauncher.csproj  MindustryLauncher.slnx  Package.appxmanifest  README.md  app.manifest  index.html  package.json
.codebuddy/plans/: winui3-fluent-migration_34e8e708.md
.github/workflows/: release.yml
Converters/: BoolToVisibilityConverter.cs
Models/: LauncherModels.cs
Properties/: launchSettings.json
Services/: AppDebugLog.cs  AppJsonContext.cs  AppPaths.cs  JsonSettings.cs  LauncherService.GameTracking.cs  LauncherService.Instances.cs  LauncherService.Runtime.cs  LauncherService.Update.cs  LauncherService.Versions.cs  LauncherService.cs  NetworkClient.cs  TaskbarProgress.cs
Styles/: ControlStyles.xaml  ThemeResources.xaml
legacy-tauri/: .gitignore  pnpm-lock.yaml
legacy-tauri/resources/: github-accelerators.json
legacy-tauri/src/: App.tsx  styles.css  types.ts
legacy-tauri/src-tauri/: Cargo.toml
legacy-tauri/src-tauri/src/: accelerators.rs  config.rs  debug_console.rs  error.rs  instances.rs  main.rs  models.rs  update.rs  versions.rs
resources/: github-accelerators.json
scripts/: dev-env.ps1  fetch-wiki-icons.mjs  gen-icon.ps1  inspect-cache-paths.ps1
src/: App.tsx  TitleBar.tsx  api.ts  styles.css  types.ts  wikiIcons.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accelerators.rs  config.rs  debug_console.rs  error.rs  fs_util.rs  instances.rs  lib.rs  (+6 more)
(+9 files in other folders)
