[package]
name = "mindustry-launcher"
version = "0.1.1"
description = "A Tauri launcher for Mindustry and MindustryX."
authors = ["kabaka9527"]
license = "GPL-3.0"
repository = "https://github.com/kabaka9527/MindustryLauncher"
edition = "2021"

[lib]
name = "mindustry_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mindustry-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
url = "2"
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }
zip = { version = "4", default-features = false, features = ["deflate"] }

[features]
default = []
